--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="fade-in">
-    <h1>My School</h1>
+    <h1>सेठ रामसुख राठी उच्च माध्यमिक विध्यालय खेड़ापा जोधपुर </h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -21,8 +21,8 @@
   <section class="content fade-in">
     <h2>Contact Us</h2>
     <p><strong>Address:</strong> 123 Main Street, Your City</p>
-    <p><strong>Phone:</strong> +91 98765 43210</p>
-    <p><strong>Email:</strong> info@myschool.com</p>
+    <p><strong>Phone:</strong> +91 9462284685</p>
+    <p><strong>Email:</strong> arvind.raliya@gmail.com</p>
   </section>
 
   <footer>© 2025 My School | All Rights Reserved</footer>
